--- a/selfDirect.yaml
+++ b/selfDirect.yaml
@@ -2,14 +2,15 @@
 payload:
   - DOMAIN-SUFFIX,courier.push.apple.com #苹果中国iMessage推送
   - DOMAIN-KEYWORD,apac-china-courier #苹果中国iMessage推送
-  - IP-CIDR,1.0.1.0/24 #unity语音
-  - IP-CIDR,63.251.140.0/24 #unity语音
-  - IP-CIDR,69.25.124.0/23 #unity语音
-  - IP-CIDR,70.42.8.0/24 #unity语音
-  - IP-CIDR,70.42.198.0/23 #unity语音
-  - IP-CIDR,74.201.102.0/23 #unity语音
-  - IP-CIDR,74.201.106.0/23 #unity语音
-  - IP-CIDR,74.201.105.108/30 #unity语音
-  - IP-CIDR,188.42.95.0/24 #unity语音
-  - IP-CIDR,188.42.147.0/24 #unity语音
-  - IP-CIDR,216.52.53.0/24 #unity语音
+  - IP-CIDR,1.0.1.0/24,no-resolve #unity语音
+  - IP-CIDR,63.251.140.0/24,no-resolve #unity语音
+  - IP-CIDR,69.25.124.0/23,no-resolve #unity语音
+  - IP-CIDR,70.42.8.0/24,no-resolve #unity语音
+  - IP-CIDR,70.42.198.0/23,no-resolve #unity语音
+  - IP-CIDR,74.201.102.0/23,no-resolve #unity语音
+  - IP-CIDR,74.201.106.0/23,no-resolve #unity语音
+  - IP-CIDR,74.201.105.108/30,no-resolve #unity语音
+  - IP-CIDR,188.42.95.0/24,no-resolve #unity语音
+  - IP-CIDR,188.42.147.0/24,no-resolve #unity语音
+  - IP-CIDR,216.52.53.0/24,no-resolve #unity语音
+  - +.cn
