--- a/selfDirect.yaml
+++ b/selfDirect.yaml
@@ -2,6 +2,7 @@
 payload:
   - DOMAIN-SUFFIX,courier.push.apple.com #苹果中国iMessage推送
   - DOMAIN-KEYWORD,apac-china-courier #苹果中国iMessage推送
+  - DOMAIN-SUFFIX,cn
   - IP-CIDR,1.0.1.0/24,no-resolve #unity语音
   - IP-CIDR,63.251.140.0/24,no-resolve #unity语音
   - IP-CIDR,69.25.124.0/23,no-resolve #unity语音
@@ -13,4 +14,4 @@ payload:
   - IP-CIDR,188.42.95.0/24,no-resolve #unity语音
   - IP-CIDR,188.42.147.0/24,no-resolve #unity语音
   - IP-CIDR,216.52.53.0/24,no-resolve #unity语音
-  - DOMAIN-SUFFIX,+.cn
+
