--- a/selfReject.yaml
+++ b/selfReject.yaml
@@ -1,11 +1,11 @@
-# UPDATE: 2024-09-20
+# UPDATE: 2024-11-19
 # DESCRIPTION: reject 96110
 payload:
-  - IP-CIDR,182.43.124.6/32 #96110
-  - IP-CIDR,39.102.194.95/32 #96110
-  - IP-CIDR,101.35.177.86/32 #96110
-  - IP-CIDR,106.74.25.198/32 #96110
-  - IP-CIDR,221.180.160.221/32 #96110
-  - IP-CIDR,211.137.117.149/32 #96110
-  - IP-CIDR,36.135.82.110/32 #96110
-  - IP-CIDR,211.139.145.129/32 #96110
+  - IP-CIDR,182.43.124.6/32,no-resolve #96110
+  - IP-CIDR,39.102.194.95/32,no-resolve #96110
+  - IP-CIDR,101.35.177.86/32,no-resolve #96110
+  - IP-CIDR,106.74.25.198/32,no-resolve #96110
+  - IP-CIDR,221.180.160.221/32,no-resolve #96110
+  - IP-CIDR,211.137.117.149/32,no-resolve #96110
+  - IP-CIDR,36.135.82.110/32,no-resolve #96110
+  - IP-CIDR,211.139.145.129/32,no-resolve #96110
