--- a/selfProxy.yaml
+++ b/selfProxy.yaml
@@ -36,3 +36,6 @@ payload:
   - DOMAIN,apple-relay.fastly-edge.com
   - DOMAIN,cp4.cloudflare.com
   - DOMAIN,apple-relay.apple.com
+  - DOMAIN-SUFFIX,gateway.icloud.com,Proxy
+  - DOMAIN-SUFFIX,gspe1-ssl.ls.apple.com,Proxy
+  - DOMAIN-SUFFIX,apps.mzstatic.com,Proxy
