--- a/selfProxy.yaml
+++ b/selfProxy.yaml
@@ -30,12 +30,11 @@ payload:
   - DOMAIN-SUFFIX,fm
   - DOMAIN-SUFFIX,seahorseplanet.net
   # Apple Intelligence
-  - DOMAIN,guzzoni.apple.com
-  - DOMAIN-SUFFIX,smoot.apple.com
-  - DOMAIN,apple-relay.cloudflare.com
-  - DOMAIN,apple-relay.fastly-edge.com
-  - DOMAIN,cp4.cloudflare.com
-  - DOMAIN,apple-relay.apple.com
-  - DOMAIN,gateway.icloud.com,Proxy
-  - DOMAIN,gspe1-ssl.ls.apple.com,Proxy
-  - DOMAIN,apps.mzstatic.com,Proxy
+  - DOMAIN-SUFFIX,apple-relay.apple.com,Proxy
+  - DOMAIN-SUFFIX,apple-relay.fastly-edge.com,Proxy
+  - DOMAIN-SUFFIX,apple-relay.cloudflare.com,Proxy
+  - DOMAIN-SUFFIX,gateway.icloud.com,Proxy
+  - DOMAIN-SUFFIX,guzzoni.apple.com,Proxy
+  - DOMAIN-SUFFIX,cp4.cloudflare.com,Proxy
+  - DOMAIN-SUFFIX,gspe1-ssl.ls.apple.com,Proxy
+  - DOMAIN-SUFFIX,apps.mzstatic.com,Proxy
