--- a/selfProxy.yaml
+++ b/selfProxy.yaml
@@ -38,3 +38,4 @@ payload:
   - DOMAIN-SUFFIX,cp4.cloudflare.com,Proxy
   - DOMAIN-SUFFIX,gspe1-ssl.ls.apple.com,Proxy
   - DOMAIN-SUFFIX,apps.mzstatic.com,Proxy
+  - DOMAIN-SUFFIX,smoot.apple.com
